--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
             <div class="home-logo">
                 <a href="index.html">
-                    <img src="images/AJANI-Logo_WhitePNG.png" alt="Homepage">
+                    <img src="images/AJANI-Logo_WhitePNG_250x62.png" alt="Homepage">
                 </a>
             </div>
 
             <div class="row home-content__main">
 
                 <div class="col-eight home-content__text pull-right">
-                    <h3>Welcome to Ajani</h3>
+                    <h3>HEY THERE</h3>
 
                     <h1>
                         LET US COOK!                        <br>
@@ -132,7 +132,7 @@
         <div class="row info-wrapper">
 
             <div class="col-seven tab-full info-main">
-                <h1>We are Ajani.</h1>
+                <h1>WE ARE AJANI.</h1>
                 <p>
                     The world of advertising has always been defined by outside-the-box thinking and innovative ideas that push boundaries.
                      We love ideas. We love change. And we are all about that forward momentum into the future. This is the drive that gave birth to AJANI.
