--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
                     <h3>HEY THERE</h3>
 
                     <h1>
-                        LET US COOK!                        <br>
-                        Our brand new website is under construction. <br>
+                       <b> LET US COOK!... </b> 
+                    </h1>
+                    <h1>
+                        Our brand new website is under construction.
                     </h1>
 
                     <p>
