left again and again

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         Our brand new website is under construction.
                     </h1>
 
-                    <p>
+                    <p class="let">
                         Be the first to know as soon as we go live and get an early bird offer on all our services.
                     </p>
 
